--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/geolocation-53bce.appspot.com/o/logo%2FSharuk.jpeg?alt=media&token=3eabc659-4433-4379-9955-90993ee25fe4" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
